--- a/wrapped/src/assets/style/main/default.scss
+++ b/wrapped/src/assets/style/main/default.scss
@@ -34,22 +34,3 @@ h4 {
 .page {
   @apply h-screen py-6 overflow-hidden;
 }
-
-* {
-  scrollbar-width: auto;
-  scrollbar-color: theme('colors.dark') transparent;
-}
-
-*::-webkit-scrollbar {
-  width: 8px;
-}
-
-*::-webkit-scrollbar-track {
-  background: transparent;
-}
-
-*::-webkit-scrollbar-thumb {
-  background-color: theme('colors.dark');
-  border-radius: 2px;
-  border: 0px solid transparent;
-}
